# trc-manager

./: .gitignore  AGENTS.md  README.md  app.py  config.json  pyproject.toml
data/artifacts/INC00027452650/: master_summary_raw.txt
data/artifacts/INC00027452650/trc_2025-06-05T06:06:00Z/: people_extraction_llm_output_raw.txt  summarisation_llm_output.txt
data/artifacts/INC00027452650/trc_2025-06-05T10:01:00Z/: people_extraction_llm_output_raw.txt  summarisation_llm_output.txt
data/incidents/: INC00027452650.json
data/people/: people_directory.json
data/uploads/INC00027452650/: INC00027452650-05062025-0606.vtt  INC00027452650-05062025-1001.vtt
tests/: test_parsing.py  test_participant_analysis.py  test_refinement.py  test_summary_and_keywords.py  test_text_enhancement_noise_reduction.py  test_transcription_parsing.py  test_vtt_cleanup.py
trc/: __init__.py  llm.py  pipeline.py
trc/prompts/: keyword_extraction.md  master_summary_synthesis.md  noise_reduction.md  participant_analysis.md  participant_knowledge_analysis.md  participant_role_analysis.md  summarisation.md
trc/stages/: __init__.py  base.py  cleanup.py  keyword_extraction.py  master_summary.py  master_summary_synthesis.py  noise_reduction.py  participant_analysis.py  participant_knowledge_analysis.py  participant_role_analysis.py  people_extraction.py  refinement.py  summarisation.py  text_enhancement.py  transcription_parsing.py
